<resources>
    <string name="app_name">NopeDot</string>

    <string name="search_note">Search note</string>
    <string name="choose_color">Choose Color</string>
    <string name="note_sample_content">Lorem Ipsum is simply dummy text of
        the printing and typesetting industry. Lorem Ipsum has been
        the industry\'s standard dummy text ever since the 1500s,
        when an unknown printer took a galley of type and scrambled
        it to make a type specimen book. It has survived not only five
        centuries, but also the leap into electronic typesetting,
        remaining essentially unchanged.</string>
    <string name="edited_on">Edited on: %1$s</string>
    <string name="search_task">Search for tasks</string>
    <string name="note">Note</string>
    <string name="note_title">Note Title</string>
    <string name="this_is_an_sample_task_inside_the_application">This is an Sample Task inside the application.</string>
    <string name="new_task">New Task</string>
    <string name="save">Save</string>
    <string name="new_task_subject">New Task Subject</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="no_category">No Category</string>
    <string name="due_date">Due Date</string>
    <string name="_10_11_1938">10/11/1938</string>
    <string name="no">No</string>
    <string name="set_as_repeat_task">Set as Repeat Task</string>
    <string name="hour">Hour</string>
    <string name="daily">Daily</string>
    <string name="weekly">Weekly</string>
    <string name="monthly">Monthly</string>
    <string name="yearly">Yearly</string>
    <string name="cancel">CANCEL</string>
    <string name="done">DONE</string>
    <string name="repeat_task">Repeat Task</string>
    <string name="time_amp_reminder"><![CDATA[Time & Reminder]]></string>
    <string name="create_new_category">Create New Category</string>
    <string name="input_here">Input here.</string>
    <string name="are_you_sure_you_want_to_delete_this_sub_item">Are you sure you want to delete this sub item?</string>
    <string name="yes">Yes</string>
    <string name="reminder">Reminder: %1$s</string>
    <string name="completed">Completed</string>
    <string name="settings">Settings</string>
    <string name="subscription">Subscription</string>
    <string name="task">Task</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="task_could_not_be_saved">Task could not be saved!</string>
    <string name="please_enter_a_task_name">Please enter a task name.</string>
    <string name="error_parsing_date_and_time">Error parsing date and time.</string>
    <string name="new_subtext">New subtext</string>
    <string name="one_time">One"\n"Time</string>
    <string name="date_format">Date Format</string>
    <string name="day_month_year">"  Day/Month/Year"</string>
    <string name="month_day_year">"  Month/Day/Year"</string>
    <string name="year_month_day">"  Year/Month/Day"</string>
    <string name="about">About</string>
    <string name="language">Language</string>
    <string name="help_us_translate">Help Us Translate</string>
    <string name="version_1_0_0">Version: 1.0.0</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="feedback">Feedback</string>
    <string name="share_app">Share App</string>
    <string name="rate_us">Rate Us</string>
    <string name="faq">FAQ</string>
    <string name="first_day_of_week">First Day Of Week</string>
    <string name="time_format">Time Format</string>
    <string name="donate">Donate</string>
    <string name="pro_version">Pro Version</string>
    <string name="check_for_updates">Check For Updates</string>
    <string name="upgrade_app">Upgrade App</string>
    <string name="notification_reminder">Notification Reminder</string>
    <string name="account_sync">Account Sync</string>
    <string name="monday">Monday</string>
    <string name="system_default">System Default</string>
    <string name="sunday">Sunday</string>
    <string name="saturday">Saturday</string>
    <string name="_24_hour">24 Hour</string>
    <string name="_12_hour">12 Hour</string>
</resources>