<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

    </data>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/primaryColor">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <TextView
            android:id="@+id/setAsRepeatTaskText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/secondaryColor"
            android:layout_marginTop="20dp"
            android:layout_marginStart="20dp"
            android:padding="3dp"
            android:textSize="16sp"
            android:textStyle="bold"
            android:text="@string/set_as_repeat_task"/>

        <LinearLayout
            android:id="@+id/repeatTaskTimer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:layout_below="@id/setAsRepeatTaskText"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/onlyOne"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:clickable="true"
                android:background="@color/backgroundColor"
                android:padding="4dp"
                android:textColor="@color/white"
                android:text="@string/one_time"/>

            <TextView
                android:id="@+id/hour"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:textAlignment="center"
                android:clickable="true"
                android:background="@color/backgroundColor"
                android:padding="4dp"
                android:textColor="@color/white"
                android:text="@string/hour"/>

            <TextView
                android:id="@+id/daily"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:textAlignment="center"
                android:clickable="true"
                android:background="@color/backgroundColor"
                android:padding="4dp"
                android:textColor="@color/white"
                android:text="@string/daily"/>

            <TextView
                android:id="@+id/weekly"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:layout_marginStart="10dp"
                android:clickable="true"
                android:background="@color/backgroundColor"
                android:padding="4dp"
                android:textColor="@color/white"
                android:text="@string/weekly"/>

            <TextView
                android:id="@+id/monthly"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:textAlignment="center"
                android:clickable="true"
                android:background="@color/backgroundColor"
                android:padding="4dp"
                android:textColor="@color/white"
                android:text="@string/monthly"/>

            <TextView
                android:id="@+id/yearly"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:textAlignment="center"
                android:clickable="true"
                android:background="@color/backgroundColor"
                android:padding="4dp"
                android:textColor="@color/white"
                android:text="@string/yearly"/>

        </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="20dp"
                android:orientation="horizontal"
                android:layout_below="@id/repeatTaskTimer"
                android:gravity="end">

                <TextView
                    android:id="@+id/cancel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toStartOf="@id/done"
                    android:layout_marginEnd="20dp"
                    android:textAlignment="center"
                    android:textColor="@color/secondaryColor"
                    android:text="@string/cancel"/>

                <TextView
                    android:id="@+id/done"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_marginStart="10dp"
                    android:textAlignment="center"
                    android:textColor="@color/secondaryColor"
                    android:text="@string/done"/>
            </RelativeLayout>

        </RelativeLayout>

    </androidx.cardview.widget.CardView>
</layout>