<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/primaryColor">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/newCategoryText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:layout_margin="20dp"
                android:text="@string/create_new_category"/>

            <EditText
                android:id="@+id/newCategory"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/backgroundColor"
                android:lines="3"
                android:textColor="@color/white"
                android:padding="10dp"
                android:hint="@string/input_here"
                android:layout_margin="20dp"
                android:layout_below="@id/newCategoryText"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="20dp"
                android:orientation="horizontal"
                android:layout_below="@id/newCategory"
                android:gravity="end">

                <TextView
                    android:id="@+id/cancel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toStartOf="@id/save"
                    android:layout_marginEnd="20dp"
                    android:textAlignment="center"
                    android:textColor="@color/secondaryColor"
                    android:text="@string/cancel"/>

                <TextView
                    android:id="@+id/save"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_marginStart="10dp"
                    android:textAlignment="center"
                    android:textColor="@color/secondaryColor"
                    android:text="@string/save"/>
            </RelativeLayout>

        </RelativeLayout>

    </com.google.android.material.card.MaterialCardView>
</layout>